# super-game-engine

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  Doxyfile  README.MD  README.md  main.cpp  tests.hpp
app/: dodge_master.cpp
code/ecs/: CMakeLists.txt
code/ecs/ecs/: common.hpp  component_manager.hpp  coordinator.cpp  coordinator.hpp  entity_manager.cpp  entity_manager.hpp  group_manager.cpp  group_manager.hpp  signature_manager.hpp  sparse_set.cpp  sparse_set.hpp  utils.hpp  view.cpp  view.hpp
code/ecs/tests/: entity_manager.cpp
code/glad/: CMakeLists.txt
code/graphics/: CMakeLists.txt  README.md
code/graphics/graphics/: camera.cpp  camera.hpp  clock.cpp  clock.hpp  config.hpp  constants.hpp  context.cpp  context.hpp  controller.cpp  controller.hpp  glad_utils.hpp  hello_triangle.cpp  hello_triangle.hpp  input_handler.cpp  input_handler.hpp  ring_buffer.hpp  shader.cpp  shader.hpp  stat_window.hpp  window.cpp  window.hpp
code/graphics/include/graphics/: camera.hpp  camera2d.hpp  camera3d.hpp  color.hpp  drawer.hpp  window.hpp
code/graphics/resources/shaders/: 2d_fragment.glsl  2d_vertex.glsl  3d_fragment.glsl  3d_vertex.glsl  color_fragment.glsl  color_vertex.glsl  fragment.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex.glsl
code/graphics/shaders/: fragment.glsl  vertex.glsl
code/graphics/src/core/: buffer_handler.cpp  buffer_handler.hpp  callback_handler.cpp  callback_handler.hpp  clock.cpp  clock.hpp  constants.hpp  context.cpp  drawer.cpp  drawer.hpp  event.cpp  glad_utils.cpp  shader.cpp  shader.hpp  shapes.hpp  stat_window.hpp  world_shader.cpp  world_shader.hpp
code/graphics/src/public/: camera.cpp  camera2d.cpp  camera3d.cpp  collisions.cpp  event.cpp  window.cpp
code/graphics/tests/: collision.cpp  drawing_example.cpp  event_example.cpp  ex_collision.cpp  graphics_example.cpp  main.cpp  next.cpp  old.cpp  reading.cpp  ring_buffer.cpp  stat_window.cpp  textures.cpp  transformations.cpp
code/multiplayer/: CMakeLists.txt
code/networking/tests/: network.cpp
code/tests/: CMakeLists.txt
code/tests/ecs/: component_manager.cpp  signature_manager.cpp  sprase_set.cpp  view.cpp
code/tests/graphics/: play.cpp
code/utils/: CMakeLists.txt
code/utils/utils/: macros.hpp
components/: components.hpp  my_color.hpp  position.hpp  velocity.hpp  wasd_movable.hpp
docs/: Doxyfile  conf.py  index.rst
ecs/: common.hpp  component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  id_utils.hpp  packed_array.hpp  packed_array_manager.hpp  signature_manager.hpp  signature_utils.hpp  system.hpp  system_manager.hpp  type_id_utils.hpp
engine/: CMakeLists.txt
engine/ecs/: CMakeLists.txt  README.md
engine/ecs/include/ecs/: common.hpp  coordinator.hpp  each_range.hpp  group.hpp  projections.hpp  registry.hpp  view.hpp
engine/ecs/src/: each_range.hpp  entity_manager.hpp  group.cpp  group.hpp  group.inl  isparse_set.cpp  isparse_set.hpp  isparse_set.inl  projections.hpp  registry.inl  sparse_set.hpp  sparse_set.inl  utils.hpp  view.inl
engine/ecs/src/core/: component_manager.hpp  entity_manager.cpp  entity_manager.hpp  filter.cpp  filter.hpp  group_manager.cpp  group_manager.hpp  igroup.cpp  igroup.hpp  isparse_set.cpp  isparse_set.hpp  signature_manager.hpp  sparse_set.hpp  utils.hpp  view.cpp  view.hpp
engine/ecs/tests/: component_manager.cpp  coordinator.cpp  entity_manager.cpp  ex_stress_aos.cpp  ex_stress_sparse.cpp  filter.cpp  group.cpp  registry.cpp  signature_manager.cpp  sparse_set.cpp  sprase_set.cpp  view.cpp  view_each.cpp
engine/glad/src/: glad.c
engine/graphics/src/: buffer_handler.hpp  camera2d.cpp  camera3d.cpp  collisions.cpp  drawer.cpp  event.cpp  shader.cpp  shader.hpp  shapes.hpp  window.cpp
engine/graphics/tests/: ex_collision.cpp  ex_drawing_example.cpp  ex_event_example.cpp  ring_buffer.cpp  stat_window.cpp
engine/networking/: CMakeLists.txt
engine/networking/src/: setup.cpp
engine/networking/tests/: network.cpp
engine/utils/utils/: macros.hpp  (+2 more)
games/: CMakeLists.txt
games/shape_dungeon/: CMakeLists.txt  README.md  main.cpp
games/shape_dungeon/src/: funcs.cpp  funcs.hpp
games/shape_dungeon/src/components/: ammo.cpp  ammo.hpp  damage.cpp  damage.hpp  faction.hpp  health_point.cpp  health_point.hpp  index.hpp  is_shooting.cpp  is_shooting.hpp  position.cpp  position.hpp  reload_time.cpp  reload_time.hpp  sprite.cpp  sprite.hpp  velocity2d.cpp  velocity2d.hpp  weapon_cooldown.cpp  weapon_cooldown.hpp  weapon_holder.cpp  weapon_holder.hpp
games/shape_dungeon/src/core/: game.cpp  game.hpp
games/shape_dungeon/src/systems/: index.hpp  render_system.cpp  render_system.hpp
games/shape_dungeon/tests/: test_a.cpp
handlers/: collision_handler.hpp  draw_backend.hpp  draw_handler.hpp  input_handler.hpp  update_handler.hpp
hooks/: pre-commit  pre-push
include/: color_map.hpp  config.hpp  globals.hpp  level_creation.hpp  pch.hpp  shape_map.hpp  test_utils.hpp
include/components/: components.hpp  radius.hpp  speed.hpp  velocity.hpp
include/ecs/: component_manager.hpp  coordinator.hpp  entity_manager.hpp  group_manager.hpp  id_utils.hpp  packed_array.hpp  packed_array_manager.hpp  signature_manager.hpp  signature_utils.hpp  sparse_set.hpp  system.hpp  system_manager.hpp  view.hpp
include/game_objects/: circle.hpp  common.hpp  game_objects.hpp  player.hpp  rectangle.hpp
include/graphics/: graphics.hpp
include/systems/: collision_system.hpp  common.hpp  draw_system.hpp  input_system.hpp  physics_system.hpp  systems.hpp
include/utils/: test_utils.hpp
objects/: enemy.hpp  game.hpp  player.hpp  room.hpp  room_manager.hpp
src/: coordinator.cpp  entity_manager.cpp  group_manager.cpp  system.cpp  test_utils.cpp  view.cpp
systems/: wasd_input.hpp
tests/: component_manager.cpp  coordinator.cpp  entity_manager.cpp  packed_array.cpp  packed_array_manager.cpp  signature_manager.cpp  sprase_set.cpp  system_manager.cpp  view.cpp
tests/ecs/: component_manager.cpp  coordinator.cpp  entity_manager.cpp  signature_manager.cpp  sprase_set.cpp  view.cpp
tests/graphics/: test.cpp
(+28 files in other folders)
